# Automations

./: .gitignore  README.md
Anki Note Generator From YT Video/: README.md  anki_creator.py  gemini_client.py  groq_client.py  main.py  model_selection.py  prompts.py  pyproject.toml  schemas.py  transcript_extractor.py  yt_title.py
Anki Note Generator From YT Video/tests/: test_flow.py  test_gemini_caching.py  test_gemini_parser.py  test_model_selection.py
Event Scraping Agent/: pyproject.toml
