[project]
name = "anki-note-generator-from-yt-video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "genanki>=0.13.1",
    "groq>=0.31.0",
    "yt-dlp>=2025.8.11",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
