[project]
name = "event-scraping-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.12",
    "beautifulsoup4>=4.13.4",
    "dateparser>=1.2.2",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "icalendar>=6.3.1",
    "lxml>=6.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pinecone>=7.3.0",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "rapidfuzz>=3.13.0",
    "tenacity>=9.1.2",
    "xlsxwriter>=3.2.5",
]
